Resolved #846 - [BUG] Picklist section is overlapped

--- a/src/aura/afl_Article_Thumb_Vote/afl_Article_Thumb_Vote.css
+++ b/src/aura/afl_Article_Thumb_Vote/afl_Article_Thumb_Vote.css
@@ -1,2 +1,3 @@
-.THIS {
+.THIS #input-3-base-combobox {
+    z-index: 30 !important;
 }
